--- a/archive.html
+++ b/archive.html
@@ -11,7 +11,7 @@
 <body class = "fade-in">
     <div class="navbar">
         <div class="logo">
-            <a href="main.html">
+            <a href="index.html">
                 <img src="Screenshot_2024-09-25_234452-removebg-preview.png" alt="Brotherhood of Failures Logo">
             </a>
         </div>
